--- a/src/resources/assets/sass/components/_gloss.scss
+++ b/src/resources/assets/sass/components/_gloss.scss
@@ -4,7 +4,7 @@
   }
 
   .ed-glossary__language {
-    margin-top: 4em;
+    margin-top: 2em;
 
     &:first-child {
       margin-top: 0 !important;
@@ -24,6 +24,7 @@
   }
 
   .ed-glossary__language__words {
+    padding-bottom: 2em;
     columns: 2;
 
     blockquote.gloss {
