Improved management of AdWords

--- a/src/resources/assets/sass/app.scss
+++ b/src/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 // Everything else
 @import "_tengwar";
 @import "_app";
+@import "_ad";
 
 @import "components/_authorize";
 @import "components/_autosuggest";
