--- a/src/resources/assets/sass/_ad.scss
+++ b/src/resources/assets/sass/_ad.scss
@@ -5,7 +5,8 @@
     max-width: 600px;
 }
 
-.ed-ad--home > .ad {
+.ed-ad--home > .ad,
+.ed-ad--sentence > .ad {
     max-width: none;
     margin: 4em 0 0 0;
 }
