--- a/src/resources/assets/sass/_ad.scss
+++ b/src/resources/assets/sass/_ad.scss
@@ -5,12 +5,17 @@
     max-width: 600px;
 }
 
-.ed-ad--home > .ad,
-.ed-ad--sentence > .ad {
+.ed-ad--home > .ad {
     max-width: none;
     margin: 4em 0 0 0;
 }
 
 .ed-ad--discuss > .ad {
     margin-top: 4em;
+}
+
+.ed-ad--sentence > .ad {
+    border: none;
+    max-width: none;
+    margin: auto;
 }
