--- a/src/resources/assets/ts/apps/sentence-inspector/containers/SentenceInspector.scss
+++ b/src/resources/assets/ts/apps/sentence-inspector/containers/SentenceInspector.scss
@@ -47,7 +47,7 @@
         }
     }
 
-    @media (min-width: $screen-md-min) {
+    @include respond-above(md) {
         > .p-group {
             display: flex;
             padding-bottom: 0;
