--- a/src/resources/assets/ts/components/Form/EntitySelect/EntitySelect.scss
+++ b/src/resources/assets/ts/components/Form/EntitySelect/EntitySelect.scss
@@ -9,7 +9,7 @@
     display: block;
     overflow: hidden;
     border: 1px solid $input-border;
-    border-radius: $border-radius-base;
+    border-radius: $border-radius;
     padding: $padding-base-vertical $padding-base-horizontal;
     font-weight: normal;
 }
