--- a/src/resources/assets/ts/apps/book-browser/containers/Glossary.scss
+++ b/src/resources/assets/ts/apps/book-browser/containers/Glossary.scss
@@ -23,30 +23,21 @@ $gloss-border-color: #dedede;
         font-size: 2rem;
         font-weight: bold;
       }
-      @media (max-width: $screen-sm-min) {
-        text-align: left;
-      }
     }
   }
   .ed-glossary__language__words {
     columns: 2;
   }
-  @media (max-width: $screen-sm-min) {
+  @include respond-below(sm) {
     .ed-glossary__language__words {
       columns: auto;
     }
   }
-  @media (min-width: $screen-xxl-width) {
+  @include respond-above(lg) {
     .ed-glossary__language__words {
       columns: 3;
     }
   }
-  @media (min-width: $screen-xxxl-width) {
-    .ed-glossary__language__words {
-      columns: 4;
-    }
-  }
-
   &.ed-glossary--single {
     .ed-glossary__language__words {
       columns: auto;
