--- a/src/resources/assets/ts/apps/discuss/index.scss
+++ b/src/resources/assets/ts/apps/discuss/index.scss
@@ -54,19 +54,19 @@ h1 {
     .r {
         display: flex;
         flex-wrap: wrap;
-        padding: $padding-base-vertical;
+        // padding: $padding-base-vertical;
 
         &:nth-child(even) {
-            background-color: $table-bg-accent;
+            // background-color: $table-bg-accent;
         }
         
         &:hover {
-            background-color: $alert-info-bg;
-            border-radius: $border-radius-base;
+            // background-color: $alert-info-bg;
+            border-radius: $border-radius;
         }
 
         &.sticky {
-            background: $text-color;
+            // background: $text-color;
             color: white;
             a {
                 color: inherit;
@@ -99,7 +99,7 @@ h1 {
 
             /* profile information */
             .pi {
-                font-family: $font-family-tiny;
+                // font-family: $font-family-tiny;
                 font-size: 0.9rem;
             }
         }
@@ -126,9 +126,9 @@ h1 {
     display: table;
     width: 100%;
     box-sizing: border-box;
-    margin-top: $line-height-computed;
-    padding-top: $line-height-computed;
-    border-top: 1px solid $gray-lighter;
+    // margin-top: $line-height-computed;
+    // padding-top: $line-height-computed;
+    // border-top: 1px solid $gray-lighter;
     transition: background-color 2s, padding 2s;
 
     &:first-child {
@@ -142,9 +142,9 @@ h1 {
     }
 
     &.highlight {
-        background-color: $alert-info-bg;
-        padding: $padding-large-vertical;
-        border-radius: $border-radius-large;
+        // background-color: $alert-info-bg;
+        // padding: $padding-large-vertical;
+        // border-radius: $border-radius-large;
     }
 
     .post-body {
@@ -182,17 +182,17 @@ h1 {
     }
 
     footer, header {
-        font-family: $font-family-tiny;
+        // font-family: $font-family-tiny;
     }
 
     footer {
-        font-size: $font-size-small;
-        color: $gray-light;
+        // font-size: $font-size-small;
+        // color: $gray-light;
 
         .post-no {
             float: right;
-            font-size: $font-size-small;
-            color: $gray-light;
+            // font-size: $font-size-small;
+            // color: $gray-light;
         }
 
         > a {
@@ -204,11 +204,11 @@ h1 {
         text-decoration: none;
 
         .like-not-liked {
-            color: $gray-light;
+            // color: $gray-light;
         }
 
         .like-liked {
-            color: $brand-success;
+            // color: $brand-success;
         }
     }
 }
