--- a/src/resources/assets/ts/components/Form/MarkdownInput/Tabs/EditTabView.scss
+++ b/src/resources/assets/ts/components/Form/MarkdownInput/Tabs/EditTabView.scss
@@ -5,7 +5,7 @@
         display: none;
     }
 
-    @media (min-width: $screen-xs-min) {
+    @include respond-above(xs) {
         display: flex;
         border-bottom: 1px solid $nav-tabs-border-color;
         > div {
@@ -33,4 +33,9 @@
             align-items: stretch;
         }
     }
+}
+
+.modal-dialog .EditTabView--split-view .EditTabView--split-view__preview {
+    max-height: 50vh;
+    overflow-y: scroll;
 }
