--- a/src/resources/assets/ts/components/Form/TagInput/TagInput.scss
+++ b/src/resources/assets/ts/components/Form/TagInput/TagInput.scss
@@ -26,7 +26,7 @@
     display: inline-block;
     overflow: hidden;
     border: 1px solid $input-border;
-    border-radius: $border-radius-base;
+    border-radius: $border-radius;
     padding: 0 $padding-base-horizontal/2;
     margin-left: 0.5em;
     font-weight: normal;
