--- a/src/resources/assets/ts/index.scss
+++ b/src/resources/assets/ts/index.scss
@@ -1,13 +1,83 @@
 @import "./_scss/_variables";
+
+@import "node_modules/bootstrap/scss/root";
+@import "node_modules/bootstrap/scss/reboot";
+@import "node_modules/bootstrap/scss/type";
+@import "node_modules/bootstrap/scss/images";
+@import "node_modules/bootstrap/scss/code";
+@import "node_modules/bootstrap/scss/grid";
+@import "node_modules/bootstrap/scss/tables";
+@import "node_modules/bootstrap/scss/forms";
+@import "node_modules/bootstrap/scss/buttons";
+@import "node_modules/bootstrap/scss/transitions";
+@import "node_modules/bootstrap/scss/dropdown";
+@import "node_modules/bootstrap/scss/button-group";
+@import "node_modules/bootstrap/scss/input-group";
+// @import "custom-forms";
+@import "node_modules/bootstrap/scss/nav";
+@import "node_modules/bootstrap/scss/navbar";
+@import "node_modules/bootstrap/scss/card";
+@import "node_modules/bootstrap/scss/breadcrumb";
+@import "node_modules/bootstrap/scss/pagination";
+@import "node_modules/bootstrap/scss/badge";
+// @import "jumbotron";
+@import "node_modules/bootstrap/scss/alert";
+@import "node_modules/bootstrap/scss/progress";
+@import "node_modules/bootstrap/scss/media";
+@import "node_modules/bootstrap/scss/list-group";
+@import "node_modules/bootstrap/scss/close";
+// @import "toasts";
+@import "node_modules/bootstrap/scss/modal";
+// @import "tooltip";
+// @import "popover";
+// @import "carousel";
+// @import "spinners";
+@import "node_modules/bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/print";
+
 @import "./_scss/_animations";
 @import "./_scss/_fx";
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
 @import './_scss/autosuggest';
 @import "./_scss/_link-block";
 
-/* Please note that there are other imports on the bottom */
+@import './apps/discuss/index.scss'; /* Discuss is pretty much everywhere, so no point in separation here. */
 
+.navbar-brand {
+  overflow: hidden;
+  text-indent: -9999px;
+  width: 140px;
+  background: url(/img/logotype.png) no-repeat center center;
+  background-size: 140px 45px;
+  margin-right: 1rem;
+}
+
+body > footer {
+  box-sizing: border-box;
+
+  display: flex;
+  > section {
+    flex: 1;
+
+    &:last-child {
+      text-align: right;
+    }
+  }
+
+  h3 {
+    font-size: 1.1rem;
+    margin-top: 0;
+    font-style: italic;
+  }
+  a, a:active, a:hover {
+    text-decoration: underline;
+  }
+  li {
+    padding: 0;
+  }
+}
+
+/* Please note that there are other imports on the bottom */
+/*
 html, body {
   width: 100%;
   margin: 0;
@@ -23,38 +93,7 @@ body {
     box-sizing: border-box;
   }
 
-  > footer {
-    color: #9b9b9b;
-    font-family: $font-family-tiny;
-    background: #202020;
-    margin-top: -$footer-height;
-    min-height: $footer-height;
-    padding: 1em;
-    box-sizing: border-box;
-    font-size: 0.9rem;
-
-    display: flex;
-    > section {
-      flex: 1;
-
-      &:last-child {
-        text-align: right;
-      }
-    }
-
-    h3 {
-      font-size: 1.1rem;
-      margin-top: 0;
-      font-style: italic;
-    }
-    a, a:active, a:hover {
-      color: #9b9b9b;
-      text-decoration: underline;
-    }
-    li {
-      padding: 0;
-    }
-  }
+  > 
 }
 #site-container  {
   padding-top: 1em;
@@ -103,14 +142,7 @@ blockquote footer {
     }
   }
 }
-.navbar-brand {
-  overflow: hidden;
-  text-indent: -9999px;
-  width: 140px;
-  background: url(/img/logotype.png) no-repeat center center;
-  background-size: 140px 45px;
-  margin-right: 10px;
-}
+
 @media (max-width: $screen-sm-min) {
   .navbar {
     margin-bottom: 0;
@@ -118,7 +150,7 @@ blockquote footer {
 }
 @media (max-width: $screen-md-min) {
   .navbar-brand {
-    margin-left: $panel-body-padding + $font-size-base*0.5; /* due to 0.5em border */
+    margin-left: $panel-body-padding + $font-size-base*0.5; // due to 0.5em border
   }
 }
 h1,h2,h3,h4,h5 {
@@ -333,5 +365,4 @@ blockquote h3 a {
 .search-result-navigator ul.pager {
   margin: 0;
 }
-
-@import './apps/discuss/index.scss'; /* Discuss is pretty much everywhere, so no point in separation here. */
+*/
